--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^3.0.0-0",
     "element-ui": "^2.4.11",
+    "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "nuxt": "^2.0.0",
-    "sass-loader": "^8.0.0"
+    "sass-loader": "^8.0.0",
+    "vue-lazyload": "^1.3.3",
+    "vue-pose": "^0.5.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
